--- a/atividade 1 Sa2/css/style.css
+++ b/atividade 1 Sa2/css/style.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
+
 body {
 
    background-color: #2c2c2c;
@@ -11,8 +14,8 @@ body {
 }
 
 header{
+    font-family: 'Varela Round', sans-serif;
     margin: 10px;
-   
     display: flex;
     justify-content: space-around;
     margin-top: 12px;
